# rustgamedev

./: Cargo.toml
src/: bundles.rs  components.rs  constants.rs  lib.rs  main.rs  phy_engine.rs  plugins.rs  resources.rs
src/attributes/: components.rs
src/behavior/: components.rs  constants.rs  mod.rs  plugin.rs  systems.rs
src/combat/: constants.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/core/: bundles.rs  components.rs  mod.rs  plugin.rs  resources.rs
src/core/inspector/: mod.rs  plugin.rs
src/input/: components.rs  plugin.rs  systems.rs
src/physics/: bundles.rs  components.rs  constants.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/physics/collision/: components.rs  constants.rs  events.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/spawn/: bundles.rs  constants.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/systems/: collision.rs  input_handler.rs  mod.rs  physics.rs  spawn.rs
