[package]
name = "rustgamedev"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy-inspector-egui = "0.32.0"
serde = "1.0.219"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
